Set Resource Timing transferSize field in Workers

The transferSize field was not correctly set in Worker contexts. Fix it.

Also create variants of the PerformanceResourceTiming size field layout
tests which use a Worker.

The common code between the worker and non-worker tests is factored out into
javascript files.

BUG=630055

Review-Url: https://codereview.chromium.org/2159163002
Cr-Commit-Position: refs/heads/master@{#408048}

Former-commit-id: 147a3f85d9f0bb1e2a654822a555d470f5fa45d4